--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
     <main>
         <form id="form">
-            <label for="id">ID</label><br>
-            <input type="text" id="id" name="id" required>
-
             <label for="marcaMiniatura">Marca da Miniatura</label><br>
             <input type="text" id="marcaMiniaturaForm" name="marcaMiniaturaForm" required>
 
@@ -41,7 +38,7 @@
             <label for="venda">Venda</label><br>
             <input type="text" id="vendaForm" name="venda" required>
 
-            <button type="submit">Adicionar </button> 
+            <input type="submit" value="Adicionar" id="submit"> 
         </form>
 
         <div class="container">
@@ -133,12 +130,40 @@
     </main>
 
 
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>  -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
+        import { getDatabase, ref, set, get, child, } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
 
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyAy7BrMBJ2Ff6_4MIx-S23Wt2sdqVfq_zY",
+            authDomain: "vendas-teste-de836.firebaseapp.com",
+            databaseURL: "https://vendas-teste-de836-default-rtdb.firebaseio.com",
+            projectId: "vendas-teste-de836",
+            storageBucket: "vendas-teste-de836.appspot.com",
+            messagingSenderId: "117985085682",
+            appId: "1:117985085682:web:caa908f518b2b4cc56a86b"
+        };
 
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
 
+        const db = getDatabase(app)
 
-
-    <script src="databaseexemplo.js" type="module"></script>
-    <script src="script.js" type="module"></script>
+        document.getElementById('submit').addEventListener('click', function(e) {
+            e.preventDefault();
+            set(ref(db, 'marcaMiniatura/' + document.getElementById('marcaMiniaturaForm').value), {
+                marcaMiniatura: document.getElementById('marcaMiniaturaForm').value,
+                marcaCarro: document.getElementById('marcaCarroForm').value,
+                qtd: document.getElementById('qtdForm').value,
+                custo: document.getElementById('custoForm').value,
+                venda: document.getElementById('vendaForm').value
+            });
+            alert('deu bom')
+        })
+    </script>
+    <script src="databaseexemplo.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
