--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
 
     <main>
         <form id="form">
-            <label for="marcaMiniatura">Marca da Miniatura</label><br>
-            <input type="text" id="marcaMiniaturaForm" name="marcaMiniaturaForm" required>
+            <label for="marcaMiniatura">Miniatura:</label>
+            <input type="text" id="miniaturaForm" name="marcaMiniaturaForm" required>
 
-            <label for="marcaCarro">Marca do Carro</label><br>
+            <label for="marcaCarro">Marca do Carro:</label>
             <input type="text" id="marcaCarroForm" name="marcaCarro" required>
 
-            <label for="quantidade">Quantidade</label><br>
+            <label for="quantidade">Quantidade:</label>
             <input type="text" id="qtdForm" name="quantidade" required>
 
-            <label for="custo">Custo</label><br>
+            <label for="custo">Custo:</label>
             <input type="text" id="custoForm" name="custo" required>
 
-            <label for="venda">Venda</label><br>
+            <label for="venda">Venda:</label>
             <input type="text" id="vendaForm" name="venda" required>
 
-            <input type="submit" value="Adicionar" id="submit"> 
+            <input type="submit" value="Adicionar" id="submit">
         </form>
+        <small id="small">Venda adicionada!</small>
 
         <div class="container">
             <div class="container-card">
@@ -130,7 +131,7 @@
     </main>
 
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>  -->
+    
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
         import { getDatabase, ref, set, get, child, } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
@@ -153,14 +154,14 @@
 
         document.getElementById('submit').addEventListener('click', function(e) {
             e.preventDefault();
-            set(ref(db, 'marcaMiniatura/' + document.getElementById('marcaMiniaturaForm').value), {
-                marcaMiniatura: document.getElementById('marcaMiniaturaForm').value,
+            set(ref(db, 'vendas/' + document.getElementById('miniaturaForm').value), {
+                marcaMiniatura: document.getElementById('miniaturaForm').value,
                 marcaCarro: document.getElementById('marcaCarroForm').value,
                 qtd: document.getElementById('qtdForm').value,
                 custo: document.getElementById('custoForm').value,
                 venda: document.getElementById('vendaForm').value
             });
-            alert('deu bom')
+            // alert('deu bom');
         })
     </script>
     <script src="databaseexemplo.js"></script>
