--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
         import { getDatabase, ref, set, get, child, } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
 
-        // Your web app's Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyAy7BrMBJ2Ff6_4MIx-S23Wt2sdqVfq_zY",
             authDomain: "vendas-teste-de836.firebaseapp.com",
@@ -149,8 +148,45 @@
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-
         const db = getDatabase(app)
+
+        // Mostrar e esconder form 
+        let label = document.querySelectorAll('form label');
+        let addVendaBtnNav = document.getElementById('adicionarVenda');
+        let addVendaBtnForm = document.getElementById('submit');
+        addVendaBtnNav.addEventListener('click', function() {
+            let form = document.getElementById('form');
+            if (form.style.display === 'none') {
+                // Muda texto no menu de navegação
+                addVendaBtnNav.textContent = 'FECHAR'
+
+                // Mostra o form
+                form.style.display = 'flex';
+
+            } else {  // Esconde o form
+                form.style.display = 'none'; 
+                addVendaBtnNav.textContent = 'ADICIONAR VENDA'
+                small.style.display = 'none';
+            }
+        });
+
+        // Texto de venda adicionada
+        let small = document.getElementById('small');
+        let submit = document.getElementById('submit');
+        submit.addEventListener('click', function() {
+            if (form.style.display === 'none') {
+                small.style.display = 'none';
+            } else {
+                small.style.display = 'flex';
+            }
+        })
+
+        // Adicionar venda na db
+        let marcaMiniatura = document.getElementById('miniaturaForm');
+        let marcaCarro = document.getElementById('marcaCarroForm');
+        let qtdMinis = document.getElementById('qtdForm');
+        let custoPreco = document.getElementById('custoForm')
+        let vendaPreco = document.getElementById('vendaForm')
 
         document.getElementById('submit').addEventListener('click', function(e) {
             e.preventDefault();
@@ -161,10 +197,29 @@
                 custo: document.getElementById('custoForm').value,
                 venda: document.getElementById('vendaForm').value
             });
-            // alert('deu bom');
         })
+
+        // Recuperar data
+        let custoTotal = document.getElementById('custoTotal');
+        let vendaTotal = document.getElementById('vendaTotal');
+        let vendidasTotal = document.getElementById('vendidasTotal');
+        let lucroTotal = document.getElementById('lucroTotal');
+        
+        const dbRef = ref(db);
+            get(child(dbRef, 'vendas/' + marcaMiniatura.value)).then((snapshot) => {
+                if(snapshot.exists()) {
+                    vendidasTotal.innerText = snapshot.val().qtd;
+                    custoTotal.innerText = snapshot.val().custo;
+                    vendaTotal.innerText = snapshot.val().venda;
+                } else {
+                    alert("Venda n existe");
+                }
+            })
     </script>
-    <script src="databaseexemplo.js"></script>
     <script src="script.js"></script>
+
+
+
+    <!-- <script src="databaseexemplo.js"></script> -->
 </body>
 </html>
